# gn_tutorial

./: .gn  BUILD.gn
android/bar/: AndroidManifest.xml  BUILD.gn
android/bar/java/com/jsq/bar/: ReadResWapper.java
android/bar/res/values/: values.xml
android/bar/xwalkcore_library_template/: AndroidManifest.xml
android/foo/: AndroidManifest.xml  BUILD.gn
android/foo/java/com/jsq/foo/: ReadRes.java
android/foo/res/values/: values.xml
android/hello_aar/: AndroidManifest.xml  BUILD.gn
android/hello_aar/java/com/jsq/aar/sample/: Hello.java  SampleActivity.java
android/hello_aar/jni/: hello.cc  hello.h  hello_aar_entry_point.cc
android/hello_aar/res/layout/: activity_sample.xml
android/hello_aar/res/values/: strings.xml
android/hello_apk/: AndroidManifest.xml  BUILD.gn
android/hello_apk/java/com/jsq/sample/: MainActivity.java
android/hello_apk/res/layout/: activity_main.xml
android/hello_jni/: AndroidManifest.xml  BUILD.gn
android/hello_jni/java/com/jsq/jni/sample/: Hello.java  MainActivity.java
android/hello_jni/jni/: hello.cc  hello.h  hello_entry_point.cc
android/hello_jni/res/layout/: activity_main.xml
java/: BUILD.gn
java/src/com/jsq/demo/: Add.java  Main.java
standard_c/: BUILD.gn  hello.cc  say_hello.cc
