


executable("hello_world") {
  sources = [
    "hello_world.cc",
  ]
}


config("hello_config") {
  defines = [
    "TWO_PEOPLE",
  ]
}

static_library("hello_static") {
  sources = [
    "hello.cc",
  ]
  all_dependent_configs = [
    ":hello_config"
  ]
}

executable("say_hello_static") {
  sources = [
    "say_hello.cc",
  ]
  deps = [
    ":hello_static",
  ]
}

shared_library("hello_shared") {
  sources = [
    "hello.cc",
    "hello.h"
  ]
  all_dependent_configs = [
    ":hello_config"
  ]
}

executable("say_hello_shared") {
  sources = [
    "say_hello.cc",
  ]
  deps = [
    ":hello_shared",
  ]
}
