import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")
import("//build/util/process_version.gni")



dist_aar("hello_aar") {
    android_manifest = "AndroidManifest.xml"
    deps = [
        ":hello_aar_java",
    ]   

    output = "$root_build_dir/aars/HelloAar.aar"
}






android_library("hello_aar_java") {
  java_files = [
    "java/com/jsq/aar/sample/SampleActivity.java"
  ]
  deps = [
    ":aar_resources",
  ]
}

android_resources("aar_resources") {
  resource_dirs = [ "res" ]
  custom_package = "com.jsq.aar.sample"
}
